--- a/requirements.txt
+++ b/requirements.txt
@@ -198,6 +198,8 @@ jupyterlab-pygments==0.2.2
     # via nbconvert
 jupyterlab-server==2.19.0
     # via jupyterlab
+jupyterlab-widgets==3.0.5
+    # via -r requirements.in
 kiwisolver==1.4.4
     # via matplotlib
 llvmlite==0.39.1
