--- a/requirements.txt
+++ b/requirements.txt
@@ -110,17 +110,21 @@ iniconfig==2.0.0
     # via pytest
 ipykernel==6.21.1
     # via
+    #   ipywidgets
     #   nbclassic
     #   notebook
 ipython==8.10.0
     # via
     #   -r requirements.in
     #   ipykernel
+    #   ipywidgets
     #   jupyterlab
 ipython-genutils==0.2.0
     # via
     #   nbclassic
     #   notebook
+ipywidgets==8.0.4
+    # via -r requirements.in
 isoduration==20.11.0
     # via jsonschema
 isort==5.12.0
@@ -199,7 +203,9 @@ jupyterlab-pygments==0.2.2
 jupyterlab-server==2.19.0
     # via jupyterlab
 jupyterlab-widgets==3.0.5
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   ipywidgets
 kiwisolver==1.4.4
     # via matplotlib
 llvmlite==0.39.1
@@ -514,6 +520,7 @@ traitlets==5.9.0
     #   comm
     #   ipykernel
     #   ipython
+    #   ipywidgets
     #   jupyter-client
     #   jupyter-core
     #   jupyter-events
@@ -552,6 +559,8 @@ werkzeug==2.2.2
     # via flask
 wheel==0.38.4
     # via pip-tools
+widgetsnbextension==4.0.5
+    # via ipywidgets
 y-py==0.5.5
     # via
     #   jupyter-ydoc
