--- a/requirements.txt
+++ b/requirements.txt
@@ -208,6 +208,8 @@ jupyterlab-widgets==3.0.5
     #   ipywidgets
 kiwisolver==1.4.4
     # via matplotlib
+line-profiler==4.0.2
+    # via -r requirements.in
 llvmlite==0.39.1
     # via numba
 mako==1.2.4
